@@ -46,7 +46,7 @@ if (isset($_GET['AddedID']))
 	display_note(get_gl_view_str($trans_type, $invoice_no, _("View the GL Journal Entries for this Invoice")), 1);
 
 	hyperlink_params("$path_to_root/purchasing/supplier_payment.php", _("Entry supplier &payment for this invoice"),
-		"PInvoice=".$invoice_no);
+		"PInvoice=".$invoice_no."&trans_type=".$trans_type);
 
 	hyperlink_params($_SERVER['PHP_SELF'], _("Enter Another Invoice"), "New=1");
 
